fix: update main container to hide overflow

--- a/src/MatrixApp.scss
+++ b/src/MatrixApp.scss
@@ -1,6 +1,8 @@
 #root {
     background-color: black;
     height: 100vh;
+    position: relative;
+    overflow: hidden;
   }
   
   .code {
